--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/react-slick": "^0.23.13",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
@@ -30,6 +31,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
