--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-vertical-timeline-component": "^3.3.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.438.0",
     "moment": "^2.30.1",
