--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "recharts": "^2.13.3",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
