--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.2",
